# mcp-ssh-manager

./: .gitignore  Cargo.toml  README.md
src/: db.rs  knowledge.rs  main.rs
src/gui/: mod.rs
src/gui/gui_tabs/: logs.rs  mod.rs  onboarding.rs
