[package]
name = "mcp-ssh-manager"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled", "backup"] }
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.36", features = ["full"] }
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
eframe = "0.27"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
rust-ssh = { path = "./crates/rust-ssh-engine" }
hex = "0.4.3"
